--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,6 +3,10 @@ body {
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: white;
 }
 
 @keyframes gradient {
@@ -20,7 +24,7 @@ body {
 .container{
     width: 28%;
     height: 50vh;
-    background-color: rgb(0,0,0, .25);
+    background-color: rgb(0,0,0, .4);
     position: relative;
     left: 35%;
     top: 20vh;
@@ -29,7 +33,34 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 22px;
+}
+.container1{
+    width: 28%;
+    height: 50vh;
+    background-color: rgb(0,0,0, .4);
+    position: relative;
+    left: 35%;
+    top: 20vh;
+    border-radius: 5%;
+}
+.inner-container{
+    width: 100%;
+    height: 80%;
+    padding-top: 10%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    text-align: center;
+}
+.important{
+    grid-column: span 2;
+}
+img{
+    margin-left: 48%;
 }
 #submit{
     background-color:rgb(240, 255, 255, .4);
@@ -40,4 +71,9 @@ body {
 }
 #submit:active{
     transform: scale(0.95);
+    background-color:rgb(120, 120, 120, .4);
+}
+#search{
+    background-color: rgb(240, 248, 255, .05);
+    border: 1px solid rgb(0, 0, 0, 0.5);
 }
