--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,14 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <% if (submit == false){ %>
     <form action="/submit" method="post">
         <div class="container">
-        <input type="text" required name="zip" placeholder="Please enter your zip code...">
+        <input type="text" required id="search" name="zip" placeholder="Please enter your zip code...">
         <input id="submit" type="submit">
     </div>
     </form>
+    <% } else{%>
+        <div class="container1">
+            <div class="inner-container">
+            <% if(dayNight && clarity == "clear") {%>
+            <img class="important" src="images\yellow-moon-16536.png">
+            <% } else if (!dayNight && clarity == "clear"){ %>
+            <img class="important" src="images\yellow-sun-16526.png">
+            <% } %>
+            <% if(dayNight && clarity == "kindacloudy") {%>
+                <img class="important" src="images\blue-clouds-and-blue-moon-16538.png">
+            <% } else if (!dayNight && clarity == "kindacloudy"){ %>
+                <img class="important" src="images\yellow-sun-and-blue-cloud-16528.png">
+            <% } %>
+            <h3 class="weatherInfo important"><%= parish %></h3>
+            <p class="weatherInfo important"><%=temp%>°</p>
+            <p class="weatherInfo important"><%=current%></p>
+        </div>
+        </div>
+    <% } %>
 </body>
 </html>
