--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     <form action="/submit" method="post">
         <div class="container">
         <input type="text" required id="search" name="zip" placeholder="Please enter your zip code...">
-        <p class="error-message"style="color: red;  position: fixed; font-size: 14px; margin-bottom: 150px;">Please enter a valid US zip code '<%= response%>'' is not a zip code.</p>
+        <p class="error-message">Please enter a valid US zip code '<%= response%>'' is not a zip code.</p>
         <input id="submit" type="submit">
     </div>
     </form>
@@ -50,4 +50,14 @@
         </div>
     <% } %>
 </body>
+<script>
+    console.log("Viewport width:", window.innerWidth, "pixels");
+
+    let errorMessage = document.querySelector('.error-message');
+    if (window.innerWidth <= 900) {
+            errorMessage.textContent = "You did not enter a valid Zip code";
+    }
+    
+</script>
+
 </html>
