--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -45,6 +45,7 @@ body {
     border-radius: 5%;
     animation-name: slide;
     animation-duration: 1s;
+    padding-bottom: 20px;
 }
 @keyframes slide{
     0%{
