--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -60,10 +60,9 @@ body {
 .inner-container{
     width: 100%;
     height: 80%;
-    padding-top: 10%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: .1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     align-items: center;
     justify-content: center;
     gap: 5px;
@@ -97,6 +96,27 @@ img{
     position: fixed; 
     font-size: 14px; 
     margin-bottom: 150px;
+}
+#toggleTempUnit {
+    background-color: rgb(52, 152, 219, 0.6);
+    border: none;
+    padding: 8px 20px;
+    margin-top: 15px;
+    margin-left: 15px;
+    color: #fff;
+    font-size: 14px;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s;
+}
+
+#toggleTempUnit:hover {
+    background-color: #2980b9;
+}
+
+#toggleTempUnit:active {
+    background-color: #1c6690;
+    transform: scale(0.95);
 }
 @keyframes err {
     0% {
@@ -139,6 +159,11 @@ img{
     body{
         font-size: 8pt;
     }
+    #toggleTempUnit{
+        font-size: 6pt;
+        margin-top: 8px;
+        margin-left: 8px;
+    }
     .error-message{
         font-size: 9pt;
     }
@@ -149,5 +174,8 @@ img{
     .container1{
         width: 80%;
         left: 15%;
+    }
+    .inner-container{
+        gap: 8px;
     }
 }
